--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "apollo-server-micro": "^3.13.0",
+    "cookie": "^0.6.0",
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "react": "^18",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-json": "^4.0.0",
     "postcss": "^8",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1"
