--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.15.0",
     "apollo-server-micro": "^3.13.0",
     "cookie": "^0.6.0",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "react": "^18",
