--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "next": "14.2.3",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
