--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18"
   },
   "devDependencies": {
