--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-micro": "^3.13.0",
     "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "next": "14.2.3",
