--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
+    "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.15.0",
     "apollo-server-micro": "^3.13.0",
     "cookie": "^0.6.0",
