--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
+    "@google-cloud/bigquery": "^7.7.1",
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.15.0",
     "apollo-server-micro": "^3.13.0",
@@ -19,6 +20,7 @@
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "googleapis": "^140.0.0",
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "react": "^18",
