--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-json": "^4.0.0",
