--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "prisma"
+    "test": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
@@ -28,12 +28,16 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/react": "18.3.3",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-json": "^4.0.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vitest": "^1.6.0"
   }
 }
