--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-json": "^4.0.0",
+    "jest": "^29.7.0",
     "jsdom": "^24.1.0",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
