--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/bigquery": "^7.7.1",
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.15.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "apollo-server-micro": "^3.13.0",
     "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
@@ -22,14 +23,21 @@
     "dotenv": "^16.4.5",
     "googleapis": "^140.0.0",
     "graphql": "^16.8.1",
+    "install": "^0.13.0",
     "next": "14.2.3",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/react": "18.3.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
