--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "types": [
+      "vite/client",
+      "@types/testing-library__react",
+      "@types/testing-library__jest-dom"
+    ]
   },
   "include": [
     "next-env.d.ts",
