--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.15.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "apollo-server-micro": "^3.13.0",
     "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
@@ -39,6 +40,7 @@
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "cypress": "^13.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-json": "^4.0.0",
